--- a/app/src/main/res/drawable/ic_favorite_border.xml
+++ b/app/src/main/res/drawable/ic_favorite_border.xml
@@ -1,5 +1,5 @@
-<vector xmlns:android="http://schemas.android.com/apk/res/android" android:height="24dp" android:tint="#00B6EE" android:viewportHeight="960" android:viewportWidth="960" android:width="24dp">
+<vector xmlns:android="http://schemas.android.com/apk/res/android" android:height="24dp" android:tint="#00B6EE" android:viewportHeight="24" android:viewportWidth="24" android:width="24dp">
       
-    <path android:fillColor="@android:color/white" android:pathData="M80,960L80,800L880,800L880,960L80,960ZM240,640L296,640L608,329L579,300L551,272L240,584L240,640ZM160,720L160,550L608,103Q619,92 633.5,86Q648,80 664,80Q680,80 695,86Q710,92 722,104L777,160Q789,171 794.5,186Q800,201 800,217Q800,232 794.5,246.5Q789,261 777,273L330,720L160,720ZM720,216L720,216L664,160L664,160L720,216ZM608,329L579,300L551,272L551,272L608,329Z"/>
+    <path android:fillColor="@android:color/white" android:pathData="M12,21.35l-1.45,-1.32C5.4,15.36 2,12.28 2,8.5 2,5.42 4.42,3 7.5,3c1.74,0 3.41,0.81 4.5,2.09C13.09,3.81 14.76,3 16.5,3 19.58,3 22,5.42 22,8.5c0,3.78 -3.4,6.86 -8.55,11.54L12,21.35z"/>
     
 </vector>
